--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
@@ -17,7 +21,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install Dependencies
-        run: pnpm ci
+        run: pnpm install
 
       - name: Build
         run: pnpm run build
