--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,6 +7,8 @@ name: Deploy to Firebase Hosting
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    env:
+      VITE_APITOKEN: ${{ secrets.VITE_APITOKEN }}
     steps:
       - uses: actions/checkout@v3
 
